--- a/hosted/style.css
+++ b/hosted/style.css
@@ -12,6 +12,10 @@
     display: none;
 }
 
+#game {
+    display: none;
+}
+
 .grid{
     display: flex;
     flex-wrap: wrap;
@@ -23,6 +27,10 @@
 
 .owned{
     background-color: rgb(128,128,128);
+}
+
+.equipped{
+    background-color: rgb(252,128,128);
 }
 
 #ad1{
