--- a/hosted/style.css
+++ b/hosted/style.css
@@ -33,6 +33,22 @@
     background-color: rgb(252,128,128);
 }
 
+#unsuccessfulEquip{
+    position: fixed;
+    display: none;
+    top: 40%;
+    left: 40%;
+    width: 30%;
+    height: 30%;
+    background-color: rgb(0,0,0);
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+#unsuccessfulEquip button{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
 #ad1{
     float: right;
     width: 128px;
