--- a/hosted/style.css
+++ b/hosted/style.css
@@ -59,17 +59,20 @@ ul{
 #unsuccessfulEquip{
     position: fixed;
     display: none;
-    top: 40%;
+    top: 30%;
     left: 40%;
-    width: 30%;
-    height: 30%;
+    width: 20%;
+    height: 10%;
     background-color: rgb(0,0,0);
     color: rgb(255, 255, 255);
     text-align: center;
+    font-size: 20px;
 }
 #unsuccessfulEquip button{
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
+    width: 20%;
+    height: 30%;
 }
 
 #ad1{
